Refactor: Modularize codebase and add YouTube transcript support
- Split monolithic files into focused modules (background, content, workers)
- Add YouTube transcript endpoint with deployed Cloudflare Worker
- Implement streaming UI updates for better UX
- Remove unused files and legacy localhost endpoints
- Update README with comprehensive documentation
- Hide Video Analysis section on YouTube pages
- Add local development and custom deployment instructions

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,12 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/content/content.js"],
+      "js": [
+        "src/content/dom/escapeHtml.js",
+        "src/content/extractors/readable-text.js",
+        "src/content/overlay/render.js",
+        "src/content/content.js"
+      ],
       "css": ["src/content/styles.css"],
       "run_at": "document_idle"
     }
