--- a/workers/wrangler.toml
+++ b/workers/wrangler.toml
@@ -8,7 +8,7 @@ local_protocol = "http"
 local = true
 
 [vars]
-SERPER_API_KEY = "84c78f024891c9114a889538b934ab9e956f7812"
+SERPER_API_KEY = ""
 
 [ai]
 binding = "AI"
